# daily-planner

./: Cargo.toml  index.html
.github/workflows/: static.yml
src/: automation.rs  business_tab.rs  controls.rs  data.rs  events.rs  main.rs  persistence.rs  print.rs  settings.rs  table.rs
src/resources/: styles.css
src/scheduler/: blocks.rs  controls.rs  mod.rs  table.rs
